# dataflow

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: api_ingestion.py  csv_to_json.py
src/dataflow/: __init__.py  context.py  errors.py  metrics.py  pipeline.py  retry.py  sinks.py  sources.py  stages.py  transforms.py
tests/: test_pipeline.py  test_retry.py  test_stages.py
