[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataflow"
version = "0.1.0"
description = "Async data pipeline framework for Python. Composable ETL stages with backpressure, retry, and observability."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "waiel", email = "git@waiel.co" },
]
keywords = ["etl", "pipeline", "async", "data", "stream"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/Waiel5/dataflow"
Repository = "https://github.com/Waiel5/dataflow"
Issues = "https://github.com/Waiel5/dataflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dataflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py39"
line-length = 100
